--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^5.6.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.5.2",
+    "vue-google-signin-button": "^1.0.2",
     "vue-router": "^3.0.1",
     "vuefire": "^2.0.0-alpha.16",
     "vuetify": "^1.0.0",
